@@ -1,5 +1,6 @@
 package pt.uminho.sysbio.common.database.connector.databaseAPI;
 
+import java.io.File;
 import java.io.IOException;
 import java.sql.DatabaseMetaData;
 import java.sql.ResultSet;
@@ -17,10 +18,11 @@ import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.ConcurrentHashMap;
 
-import javax.swing.table.TableStringConverter;
-import javax.swing.text.html.parser.Parser;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import pt.uminho.ceb.biosystems.mew.utilities.datastructures.pair.Pair;
+import pt.uminho.ceb.biosystems.mew.utilities.io.FileUtils;
 import pt.uminho.sysbio.common.database.connector.datatypes.Connection;
 import pt.uminho.sysbio.merlin.utilities.containers.model.MetaboliteContainer;
 
@@ -29,6 +31,12 @@ import pt.uminho.sysbio.merlin.utilities.containers.model.MetaboliteContainer;
  *
  */
 public class ProjectAPI {
+	
+	private static final Logger logger = LoggerFactory.getLogger(ProjectAPI.class);
+
+	private static final String CLEAN_TABLES_FILE = FileUtils.getConfFolderPath()+"cleanFK.txt";
+	private static final String SEPARATOR = "\t";
+	private static final int DEFAULT_INDEX_KEY = 0;
 
 	/**
 	 * Get project id.
@@ -825,11 +833,19 @@ public class ProjectAPI {
 	 * @return
 	 * @throws SQLException
 	 */
-	public static HashMap<String,String[]> countReactionsByPathwayID(HashMap<String,String[]> qls, Statement stmt) throws SQLException{
+	public static HashMap<String,String[]> countReactionsByPathwayID(HashMap<String,String[]> qls, Statement stmt) throws SQLException {
+		
+		String aux = " originalReaction";
+		
+		if(ProjectAPI.isCompartmentalisedModel(stmt));
+			aux = " NOT originalReaction ";
+		
 		ResultSet rs = stmt.executeQuery("SELECT pathway_idpathway, count(reaction_idreaction) " +
-				"FROM pathway " +
-				"RIGHT JOIN pathway_has_reaction ON pathway_idpathway=pathway.idpathway " +
-				"GROUP BY pathway_idpathway ORDER BY name;");
+				" FROM pathway " +
+				" INNER JOIN pathway_has_reaction ON pathway_idpathway=pathway.idpathway " +
+				" INNER JOIN reaction ON (reaction.idreaction = reaction_idreaction) " +
+				" WHERE " +aux+
+				" GROUP BY pathway_idpathway ORDER BY pathway.name;");
 
 		while(rs.next()) {
 			
@@ -877,12 +893,23 @@ public class ProjectAPI {
 
 		ArrayList<String[]> result = new ArrayList<>();
 
+		String aux = " AND originalReaction";
+		
+		if(ProjectAPI.isCompartmentalisedModel(stmt));
+			aux = " AND NOT originalReaction ";
+		
 		ResultSet rs = stmt.executeQuery("SELECT distinct(reaction.idreaction), name, equation " +
 				"FROM pathway_has_reaction " +
 				"INNER JOIN reaction ON idreaction = reaction_idreaction " +
-				"WHERE pathway_idpathway = " + id + " " +
+				"WHERE pathway_idpathway = " + id + aux +
 				"ORDER BY name;");
 
+		System.out.println("SELECT distinct(reaction.idreaction), name, equation " +
+				"FROM pathway_has_reaction " +
+				"INNER JOIN reaction ON idreaction = reaction_idreaction " +
+				"WHERE pathway_idpathway = " + id + aux +
+				"ORDER BY name;");
+		
 		while(rs.next()){
 			String[] list = new String[3];
 			list[0]=rs.getString(1);
@@ -2143,11 +2170,11 @@ public class ProjectAPI {
 
 			if(!index.containsKey(rs.getString(1))) {
 
-				index.put(rs.getString(1), new Integer(1));
+				index.put(rs.getString(1), Integer.valueOf(1));
 			}
 			else {
 
-				Integer ne = new Integer(index.get(rs.getString(1)).intValue() + 1);
+				Integer ne = Integer.valueOf(index.get(rs.getString(1)).intValue() + 1);
 				index.put(rs.getString(1), ne);
 			}
 		}
@@ -2484,7 +2511,7 @@ public class ProjectAPI {
 		ResultSet rs = stmt.executeQuery("SELECT count(distinct(promoter_idpromoter)) FROM transcription_unit_promoter");
 
 		if(rs.next())
-			promoters_by_tus = (new Double(rs.getString(1)).doubleValue()) / (new Double(num).doubleValue());
+			promoters_by_tus = (Double.valueOf(rs.getString(1))) / (Double.valueOf(num));
 
 		rs.close();
 		return promoters_by_tus;
@@ -2503,7 +2530,7 @@ public class ProjectAPI {
 		ResultSet rs = stmt.executeQuery("SELECT count(distinct(gene_idgene)) FROM transcription_unit_gene");
 
 		if(rs.next())
-			gens_tu = new Integer(rs.getString(1)).intValue();
+			gens_tu = Integer.valueOf(rs.getString(1)).intValue();
 
 		rs.close();
 		return gens_tu;
@@ -3783,12 +3810,8 @@ public class ProjectAPI {
 	 */
 	public static void mergeTables (Statement receiverDbStatement, String[] tableNames, String sourceDatabase, String destinyDatabase) throws SQLException{
 		
-		for(String tableName : tableNames){
-			
-			System.out.println(tableName);
-		
+		for(String tableName : tableNames)			
 			receiverDbStatement.execute("INSERT INTO " + destinyDatabase + "." + tableName + " SELECT * FROM " + sourceDatabase + "." + tableName + ";");
-		}
 	}
 	
 	/**
@@ -3832,5 +3855,48 @@ public class ProjectAPI {
 		rs.close();
 		return columns;
 	}
+	
+	
+	/**
+	 * Clean project tables with orphan foreign keys.
+	 * 
+	 * @param stmt
+	 * @throws IOException 
+	 * @throws SQLException 
+	 */
+	public static void cleanProjectsTables(Statement stmt) throws IOException, SQLException {
+
+		Map<String, String[]> data = FileUtils.readTableFileFormat(new File(CLEAN_TABLES_FILE), SEPARATOR, DEFAULT_INDEX_KEY);
+		
+		for(String id : data.keySet())
+			ProjectAPI.cleanNMTables(data.get(id)[1], data.get(id)[2], data.get(id)[4], data.get(id)[3], stmt);
+		
+	}
+
+	/**
+	 * Delete orphan foreign keys.
+	 * 
+	 * @param table1
+	 * @param table1_id2
+	 * @param table2
+	 * @param table2_id2
+	 * @param stmt
+	 * @throws SQLException
+	 */
+	public static void cleanNMTables(String table1, String table1_id2, String table2, String table2_id2, Statement stmt) throws SQLException {
+		
+		
+		ResultSet rs = stmt.executeQuery("SELECT COUNT(*) FROM "+table1+" tb1 WHERE  tb1."+table1_id2+" NOT IN (SELECT tb2."+table2_id2+" FROM  "+table2+" tb2);");
+		
+		if(rs.next()) {
+			
+			int entries = rs.getInt(1);
+			logger.warn("warning, {} entries will be removed from table {} ",entries, table1);
+			if(entries>0)
+				stmt.execute("DELETE tb1 FROM "+table1+" tb1 WHERE  tb1."+table1_id2+" NOT IN (SELECT tb2."+table2_id2+" FROM  "+table2+" tb2);");
+		}
+	}
+
 }
+
 
